--- a/trains/pubspec.yaml
+++ b/trains/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   cloud_firestore: ^0.12.9+4 #int he tutorial was ^0.12.9+4 era +5
   provider: ^3.2.0
   google_sign_in: ^4.0.4
+  google_maps_flutter: ^0.4.0
+  geolocator: '^5.0.0'
 dev_dependencies:
   flutter_test:
     sdk: flutter
