--- a/trains/pubspec.yaml
+++ b/trains/pubspec.yaml
@@ -23,14 +23,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  #firebase_core: ^0.4.0+9 #not needed in tutorial
+  firebase_core: ^0.4.0+9 #not needed in tutorial
   #firebase_analytics: ^5.0.2 #not needed in tutorial
   firebase_auth: ^0.14.0+5 #this is the same version of tutorial
   cloud_firestore: ^0.12.9+4 #int he tutorial was ^0.12.9+4 era +5
   provider: ^3.2.0
   google_sign_in: ^4.0.4
   google_maps_flutter: ^0.4.0
-  geolocator: '^5.0.0'
+  geolocator: ^5.0.0
+  latlong: ^0.6.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
