--- a/trains/pubspec.yaml
+++ b/trains/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   provider: ^3.2.0
   google_sign_in: ^4.0.4
   google_maps_flutter: ^0.4.0
-  geolocator: ^5.0.0
+  location: ^2.3.5
   latlong: ^0.6.1
 dev_dependencies:
   flutter_test:
