--- a/trains/pubspec.yaml
+++ b/trains/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+2
   date_format: ^1.0.8
+  flutter_svg: ^0.15.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
