--- a/trains/pubspec.yaml
+++ b/trains/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   http: ^0.12.0+2
   date_format: ^1.0.8
   flutter_svg: ^0.15.0
+  showcaseview: ^0.1.3
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
