--- a/trains/pubspec.yaml
+++ b/trains/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   date_format: ^1.0.8
   flutter_svg: ^0.15.0
   showcaseview: ^0.1.3
+  shared_preferences: ^0.5.6
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
