--- a/trains/pubspec.yaml
+++ b/trains/pubspec.yaml
@@ -34,7 +34,10 @@ dependencies:
   google_maps_flutter: ^0.4.0
   location: ^2.3.5
   latlong: ^0.6.1
-  percent_indicator: "^2.1.1"
+  percent_indicator: ^2.1.1
+  image_picker: ^0.6.2+3
+  permission_handler: ^4.0.0
+  firebase_storage: ^3.0.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
