--- a/trains/pubspec.yaml
+++ b/trains/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   location: ^2.3.5
   latlong: ^0.6.1
   percent_indicator: ^2.1.1
-  image_picker: ^0.6.2+3
-  permission_handler: ^4.0.0
+  file_picker: ^1.4.3+2
+  simple_image_crop: ^0.1.3
   firebase_storage: ^3.0.10
 dev_dependencies:
   flutter_test:
