--- a/trains/.gitignore
+++ b/trains/.gitignore
@@ -71,3 +71,10 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+.vscode/
+android/.project
+android/.settings/
+android/app/.classpath
+android/app/.project
+android/app/.settings/
