--- a/trains/pubspec.yaml
+++ b/trains/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_svg: ^0.15.0
   showcaseview: ^0.1.3
   shared_preferences: ^0.5.6
+  geolocator: ^5.1.5
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
