--- a/trains/pubspec.yaml
+++ b/trains/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   file_picker: ^1.4.3+2
   simple_image_crop: ^0.1.3
   firebase_storage: ^3.0.10
+  sqflite:
 dev_dependencies:
   flutter_test:
     sdk: flutter
