--- a/trains/pubspec.yaml
+++ b/trains/pubspec.yaml
@@ -41,6 +41,14 @@ dependencies:
   firebase_storage: ^3.0.10
   path_provider: ^1.5.1
   sqflite:
+  flutter_launcher_icons: "^0.7.3"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path_android: "assets/iconTrains.png"
+  image_path_ios: "assets/iconTrains.png"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
