--- a/trains/pubspec.yaml
+++ b/trains/pubspec.yaml
@@ -1,5 +1,5 @@
 name: trains
-description: A new Flutter application.
+description: Quest'app è stata pensata per poter valutare lo stato di affollamento dei treni regionali italiani.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
