--- a/trains/pubspec.yaml
+++ b/trains/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sqflite:
   flutter_launcher_icons: "^0.7.3"
   confetti: ^0.3.0
+  connectivity: ^0.4.6+2
 
 flutter_icons:
   android: true
