--- a/trains/android/app/build.gradle
+++ b/trains/android/app/build.gradle
@@ -39,7 +39,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "it.peronmarchiori.trains"
-        minSdkVersion 16 // the tutorial changed it to 21 era 16
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
